--- a/share/package.json
+++ b/share/package.json
@@ -11,7 +11,7 @@
     "android/build.gradle",
     "dist/",
     "ios/Plugin/",
-    "CapacitorShare.podspec"
+    "FarmqaCapacitorShare.podspec"
   ],
   "author": "Ionic <hi@ionicframework.com>",
   "license": "MIT",
